--- a/app/config.json
+++ b/app/config.json
@@ -1,6 +1,9 @@
 {
   "resources": {
     "models": {
+      "watchtower": {
+        "path": "tower/watchtower.obj"
+      }
     }
   },
   "window": {
